--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -105,6 +105,10 @@ jobs:
       - name: Build Windows EXE
         shell: pwsh
         run: |
+          chcp 65001 > $null
+          $env:PYTHONUTF8 = "1"
+          $env:PYTHONIOENCODING = "utf-8"
+          [Console]::OutputEncoding = [System.Text.Encoding]::UTF8
           flet build windows --yes --skip-flutter-doctor --no-rich-output
 
       - name: Collect EXE
